--- a/requirements.txt
+++ b/requirements.txt
@@ -1,78 +1,17 @@
-argon2-cffi==21.1.0
 asgiref==3.5.2
-attrs==21.2.0
-backcall==0.2.0
-beautifulsoup4==4.10.0
-bleach==4.1.0
-certifi==2022.9.24
-cffi==1.14.6
+certifi==2022.6.15
 charset-normalizer==2.1.1
-colorama==0.4.4
-commonmark==0.9.1
-cycler==0.11.0
-debugpy==1.4.1
-decorator==5.0.9
-defusedxml==0.7.1
-Django==4.1.2
-django-cors-headers==3.13.0
-entrypoints==0.3
-fonttools==4.28.1
+dj-database-url==1.0.0
+Django==4.1
 gunicorn==20.1.0
-idna==3.4
-ipykernel==6.3.1
-ipython==7.27.0
-ipython-genutils==0.2.0
-jedi==0.18.0
-Jinja2==3.0.1
-jsonschema==3.2.0
-jupyter-client==7.0.2
-jupyter-core==4.7.1
-jupyterlab-pygments==0.1.2
-kiwisolver==1.3.2
-MarkupSafe==2.0.1
-matplotlib==3.5.0
-matplotlib-inline==0.1.2
-mistune==0.8.4
-nbclient==0.5.4
-nbconvert==6.1.0
-nbformat==5.1.3
-nest-asyncio==1.5.1
-notebook==6.4.3
-numpy==1.21.4
-oauthlib==3.1.1
-packaging==21.0
-pandocfilters==1.4.3
-parso==0.8.2
-pickleshare==0.7.5
-Pillow==8.4.0
-prometheus-client==0.11.0
-prompt-toolkit==3.0.20
-psycopg2-binary==2.9.4
-pycparser==2.20
-pygame==2.0.1
-Pygments==2.10.0
-pyparsing==2.4.7
-pyrsistent==0.18.0
-python-dateutil==2.8.2
-pywin32==301
-pywinpty==1.1.3
-pyzmq==22.2.1
+idna==3.3
+psycopg2-binary==2.9.3
+pytz==2022.2.1
 requests==2.28.1
-requests-oauthlib==1.3.0
-rich==11.0.0
-Send2Trash==1.8.0
-setuptools-scm==6.3.2
 six==1.16.0
-soupsieve==2.3.1
-sqlparse==0.4.3
-terminado==0.11.1
-testpath==0.5.0
-tomli==1.2.2
-tornado==6.1
-traitlets==5.1.0
-tweepy==4.0.0
-tzdata==2022.4
-urllib3==1.26.12
-wcwidth==0.2.5
-webencodings==0.5.1
+sqlparse==0.4.2
+typed-ast==1.5.4
+urllib3==1.26.11
 whitenoise==6.2.0
+wrapt==1.14.1
+django-cors-headers==3.13.0
